--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,8 @@ add_executable(${PROJECT_NAME}
         display/mono_vlsb.h
         display/ssd1306.cpp
         display/ssd1306.h
+        rotsw.cpp
+        rotsw.h
 )
 
 # Create map/bin/hex/uf2 files
