--- a/classes/CMakeLists.txt
+++ b/classes/CMakeLists.txt
@@ -1,2 +1,2 @@
 # Class Libraries -- Add .cpp file from each class here
-add_library(Classes ExampleClass.cpp)
+add_library(Classes ExampleClass.cpp RotSW.cpp RotSW.h)
