--- a/classes/CMakeLists.txt
+++ b/classes/CMakeLists.txt
@@ -1,2 +1,7 @@
-# Class Libraries -- Add .cpp file from each class here
-add_library(Classes ExampleClass.cpp)
+# Library -- Add each .cpp or .c file from the folder here
+add_library(Classes
+            GMP252.cpp)
+
+target_include_directories(Classes INTERFACE
+        ${CMAKE_CURRENT_SOURCE_DIR}
+)
