--- a/classes/CMakeLists.txt
+++ b/classes/CMakeLists.txt
@@ -1,7 +1,16 @@
-# Library -- Add each .cpp or .c file from the folder here
-add_library(Classes
+# Library name
+set(LIBRARY_NAME classes)
+
+# Library sources -- Add each .cpp or .c file from the folder here
+add_library(${LIBRARY_NAME}
             GMP252.cpp)
 
-target_include_directories(Classes INTERFACE
+# Include directories -- No need to edit
+target_include_directories(${LIBRARY_NAME} INTERFACE
         ${CMAKE_CURRENT_SOURCE_DIR}
+)
+
+# Link Libraries -- Add each library that the current module needs to this list
+target_link_libraries(${LIBRARY_NAME}
+        modbus
 )
