--- a/modbus/CMakeLists.txt
+++ b/modbus/CMakeLists.txt
@@ -1,14 +1,18 @@
-# Library -- Add each .cpp or .c file from the folder here
-add_library(Modbus
-        ModbusClient.cpp
-        ModbusRegister.cpp)
+# Library name
+set(LIBRARY_NAME modbus)
 
-target_include_directories(Modbus INTERFACE
+# Library sources -- Add each .cpp or .c file from the folder here
+add_library(${LIBRARY_NAME}
+        ModbusClient.cpp
+        ModbusRegister.cpp
+        nanomodbus.c)
+
+# Include directories -- No need to edit
+target_include_directories(${LIBRARY_NAME} INTERFACE
         ${CMAKE_CURRENT_SOURCE_DIR}
-        ${PROJECT_SOURCE_DIR}/uart
 )
 
-target_link_libraries(Modbus
-        pico
-        Uart
+# Link Libraries -- Add each library that the current module needs to this list
+target_link_libraries(${LIBRARY_NAME}
+        uart
 )
