update cmakelists to split each folder into their own library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,28 +27,28 @@ file(GLOB MQTT_SOURCES "paho.mqtt.embedded-c/MQTTPacket/src/*.c")
 # Tell CMake where to find the executable source file
 add_executable(${PROJECT_NAME}
         main.cpp
-        modbus/nanomodbus.h
-        modbus/nanomodbus.c
-        uart/PicoUart.cpp
-        uart/PicoUart.h
-        uart/RingBuffer.cpp
-        uart/RingBuffer.h
-        mqtt/Countdown.cpp
-        mqtt/Countdown.h
-        mqtt/IPStack.cpp
-        mqtt/IPStack.h
-        mqtt/lwipopts.h
-        modbus/ModbusRegister.cpp
-        modbus/ModbusRegister.h
-        modbus/ModbusClient.cpp
-        modbus/ModbusClient.h
+        # modbus/nanomodbus.h
+        # modbus/nanomodbus.c
+        # uart/PicoUart.cpp
+        # uart/PicoUart.h
+        # uart/RingBuffer.cpp
+        # uart/RingBuffer.h
+        # mqtt/Countdown.cpp
+        # mqtt/Countdown.h
+        # mqtt/IPStack.cpp
+        # mqtt/IPStack.h
+        # mqtt/lwipopts.h
+        # modbus/ModbusRegister.cpp
+        # modbus/ModbusRegister.h
+        # modbus/ModbusClient.cpp
+        # modbus/ModbusClient.h
         ${MQTT_SOURCES}
-        display/framebuf.cpp
-        display/framebuf.h
-        display/mono_vlsb.cpp
-        display/mono_vlsb.h
-        display/ssd1306.cpp
-        display/ssd1306.h
+        # display/framebuf.cpp
+        # display/framebuf.h
+        # display/mono_vlsb.cpp
+        # display/mono_vlsb.h
+        # display/ssd1306.cpp
+        # display/ssd1306.h
 )
 
 # Create map/bin/hex/uf2 files
@@ -59,27 +59,36 @@ pico_add_extra_outputs(${PROJECT_NAME})
 #        POST_BUILD
 #        COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_BINARY_DIR}/${PROJECT_NAME}.uf2 d: )
 
+# Included directories
 target_include_directories(${PROJECT_NAME} PRIVATE
         "${PROJECT_BINARY_DIR}"
-        "${PROJECT_SOURCE_DIR}/classes"
-        modbus
-        mqtt
-        uart
-        display
+        #classes
+        # modbus
+        # mqtt
+        # uart
+        # display
         paho.mqtt.embedded-c/MQTTPacket/src
         paho.mqtt.embedded-c/MQTTClient/src
 )
 
-# Sub-Directories
-add_subdirectory(${PROJECT_SOURCE_DIR}/classes)
+# Sub-directories
+add_subdirectory(display)
+add_subdirectory(modbus)
+add_subdirectory(mqtt)
+add_subdirectory(uart)
+add_subdirectory(classes)
 
 # Link to pico_stdlib (gpio, time, etc. functions)
 target_link_libraries(${PROJECT_NAME} 
-        pico_stdlib
-        hardware_i2c
-        hardware_gpio
-        pico_cyw43_arch_lwip_poll
-        Classes
+        # pico_stdlib
+        # hardware_i2c
+        # hardware_gpio
+        # pico_cyw43_arch_lwip_poll
+        display
+        modbus
+        mqtt
+        uart
+        classes
 )
 
 # Enable usb output, disable uart output
