--- a/modbus/CMakeLists.txt
+++ b/modbus/CMakeLists.txt
@@ -1,9 +1,11 @@
 # Library name
-set(LIBRARY_NAME classes)
+set(LIBRARY_NAME modbus)
 
 # Library sources -- Add each .cpp or .c file from the folder here
 add_library(${LIBRARY_NAME}
-            ExampleClass.cpp)
+        ModbusClient.cpp
+        ModbusRegister.cpp
+        nanomodbus.c)
 
 # Include directories -- No need to edit
 target_include_directories(${LIBRARY_NAME} INTERFACE
@@ -12,5 +14,5 @@ target_include_directories(${LIBRARY_NAME} INTERFACE
 
 # Link Libraries -- Add each library that the current module needs to this list
 target_link_libraries(${LIBRARY_NAME}
-        ##
+        uart
 )
