--- a/uart/CMakeLists.txt
+++ b/uart/CMakeLists.txt
@@ -1,9 +1,10 @@
 # Library name
-set(LIBRARY_NAME classes)
+set(LIBRARY_NAME uart)
 
 # Library sources -- Add each .cpp or .c file from the folder here
 add_library(${LIBRARY_NAME}
-            ExampleClass.cpp)
+        PicoUart.cpp 
+        RingBuffer.cpp)
 
 # Include directories -- No need to edit
 target_include_directories(${LIBRARY_NAME} INTERFACE
@@ -12,5 +13,6 @@ target_include_directories(${LIBRARY_NAME} INTERFACE
 
 # Link Libraries -- Add each library that the current module needs to this list
 target_link_libraries(${LIBRARY_NAME}
-        ##
+        pico_stdlib
+        hardware_gpio
 )
