--- a/classes/CMakeLists.txt
+++ b/classes/CMakeLists.txt
@@ -3,7 +3,7 @@ set(LIBRARY_NAME classes)
 
 # Library sources -- Add each .cpp or .c file from the folder here
 add_library(${LIBRARY_NAME}
-            GMP252.cpp)
+            ExampleClass.cpp)
 
 # Include directories -- No need to edit
 target_include_directories(${LIBRARY_NAME} INTERFACE
@@ -12,5 +12,5 @@ target_include_directories(${LIBRARY_NAME} INTERFACE
 
 # Link Libraries -- Add each library that the current module needs to this list
 target_link_libraries(${LIBRARY_NAME}
-        modbus
+        ##
 )
