add gmp252 sensor tests to main

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,6 +90,7 @@ target_link_libraries(${PROJECT_NAME}
         mqtt
         uart
         classes
+        sensors
 )
 
 # Enable usb output, disable uart output
