--- a/display/CMakeLists.txt
+++ b/display/CMakeLists.txt
@@ -13,6 +13,6 @@ target_include_directories(${LIBRARY_NAME} INTERFACE
 )
 
 # Link Libraries -- Add each library that the current module needs to this list
-target_link_libraries(${LIBRARY_NAME}
+target_link_libraries(${LIBRARY_NAME} PUBLIC
         hardware_i2c
 )
