--- a/classes/CMakeLists.txt
+++ b/classes/CMakeLists.txt
@@ -12,6 +12,6 @@ target_include_directories(${LIBRARY_NAME} INTERFACE
 )
 
 # Link Libraries -- Add each library that the current module needs to this list
-target_link_libraries(${LIBRARY_NAME}
+target_link_libraries(${LIBRARY_NAME} PRIVATE
         modbus
 )
