--- a/mqtt/CMakeLists.txt
+++ b/mqtt/CMakeLists.txt
@@ -12,7 +12,7 @@ target_include_directories(${LIBRARY_NAME} PUBLIC
 )
 
 # Link Libraries -- Add each library that the current module needs to this list
-target_link_libraries(${LIBRARY_NAME}
+target_link_libraries(${LIBRARY_NAME} PUBLIC
         pico_stdlib
         pico_cyw43_arch_lwip_poll
 )
