--- a/sensors/CMakeLists.txt
+++ b/sensors/CMakeLists.txt
@@ -12,6 +12,7 @@ target_include_directories(${LIBRARY_NAME} INTERFACE
 )
 
 # Link Libraries -- Add each library that the current module needs to this list
-target_link_libraries(${LIBRARY_NAME}
+target_link_libraries(${LIBRARY_NAME} PRIVATE
+        pico_stdlib
         modbus
 )
