--- a/uart/CMakeLists.txt
+++ b/uart/CMakeLists.txt
@@ -12,7 +12,7 @@ target_include_directories(${LIBRARY_NAME} INTERFACE
 )
 
 # Link Libraries -- Add each library that the current module needs to this list
-target_link_libraries(${LIBRARY_NAME}
+target_link_libraries(${LIBRARY_NAME} PUBLIC
         pico_stdlib
         hardware_gpio
 )
