Skimmed interrupt handler ; events interpreted now when called upon. Enables any or all switches with constructor according to parameters.

--- a/classes/CMakeLists.txt
+++ b/classes/CMakeLists.txt
@@ -4,7 +4,7 @@ set(LIBRARY_NAME classes)
 # Library sources -- Add each .cpp or .c file from the folder here
 add_library(${LIBRARY_NAME}
             ExampleClass.cpp
-        RotSW.cpp
+        PicoSW.cpp
 )
 
 # Include directories -- No need to edit
