--- a/classes/CMakeLists.txt
+++ b/classes/CMakeLists.txt
@@ -13,5 +13,6 @@ target_include_directories(${LIBRARY_NAME} INTERFACE
 
 # Link Libraries -- Add each library that the current module needs to this list
 target_link_libraries(${LIBRARY_NAME} PRIVATE
+        hardware_i2c
         modbus
 )
