--- a/classes/CMakeLists.txt
+++ b/classes/CMakeLists.txt
@@ -4,7 +4,8 @@ set(LIBRARY_NAME classes)
 # Library sources -- Add each .cpp or .c file from the folder here
 add_library(${LIBRARY_NAME}
         ExampleClass.cpp
-        MIO12V.cpp)
+        MIO12V.cpp
+        I2CHandler.cpp)
 
 # Include directories -- No need to edit
 target_include_directories(${LIBRARY_NAME} INTERFACE
