shifted some cmake linked library visibility rules

--- a/observer/CMakeLists.txt
+++ b/observer/CMakeLists.txt
@@ -2,8 +2,9 @@
 set(LIBRARY_NAME observer)
 
 # Library sources -- Add each .cpp or .c file from the folder here
-add_library(${LIBRARY_NAME} INTERFACE
-        Subject.cpp 
+add_library(${LIBRARY_NAME}
+        INTERFACE
+        ##
 )
 
 # Include directories -- No need to edit
@@ -12,6 +13,7 @@ target_include_directories(${LIBRARY_NAME} INTERFACE
 )
 
 # Link Libraries -- Add each library that the current module needs to this list
-target_link_libraries(${LIBRARY_NAME} PUBLIC
+target_link_libraries(${LIBRARY_NAME}
+        PRIVATE
         ##
 )
