--- a/classes/CMakeLists.txt
+++ b/classes/CMakeLists.txt
@@ -13,7 +13,8 @@ target_include_directories(${LIBRARY_NAME} INTERFACE
 )
 
 # Link Libraries -- Add each library that the current module needs to this list
-target_link_libraries(${LIBRARY_NAME} PRIVATE
-        modbus
+target_link_libraries(${LIBRARY_NAME}
+        PRIVATE
         pico_stdlib
+        modbus
 )
