--- a/modbus/CMakeLists.txt
+++ b/modbus/CMakeLists.txt
@@ -13,6 +13,9 @@ target_include_directories(${LIBRARY_NAME} INTERFACE
 )
 
 # Link Libraries -- Add each library that the current module needs to this list
-target_link_libraries(${LIBRARY_NAME} PUBLIC
+target_link_libraries(${LIBRARY_NAME}
+        PRIVATE
+        hardware_uart
+        PUBLIC
         uart
 )
