--- a/mqtt/CMakeLists.txt
+++ b/mqtt/CMakeLists.txt
@@ -7,12 +7,15 @@ add_library(${LIBRARY_NAME}
         IPStack.cpp)
 
 # Include directories -- No need to edit
-target_include_directories(${LIBRARY_NAME} PUBLIC
+target_include_directories(${LIBRARY_NAME}
+        PUBLIC
         ${CMAKE_CURRENT_SOURCE_DIR}
 )
 
 # Link Libraries -- Add each library that the current module needs to this list
-target_link_libraries(${LIBRARY_NAME} PUBLIC
+target_link_libraries(${LIBRARY_NAME}
+        PRIVATE
         pico_stdlib
+        PUBLIC
         pico_cyw43_arch_lwip_poll
 )
