--- a/sensors/CMakeLists.txt
+++ b/sensors/CMakeLists.txt
@@ -7,12 +7,16 @@ add_library(${LIBRARY_NAME}
             HMP60.cpp)
 
 # Include directories -- No need to edit
-target_include_directories(${LIBRARY_NAME} INTERFACE
+target_include_directories(${LIBRARY_NAME}
+        INTERFACE
         ${CMAKE_CURRENT_SOURCE_DIR}
 )
 
 # Link Libraries -- Add each library that the current module needs to this list
-target_link_libraries(${LIBRARY_NAME} PRIVATE
+target_link_libraries(${LIBRARY_NAME}
+        PRIVATE
         pico_stdlib
         modbus
+        PUBLIC
+        observer
 )
