changed json parser to a publicly linked library

--- a/mqtthandler/CMakeLists.txt
+++ b/mqtthandler/CMakeLists.txt
@@ -25,5 +25,6 @@ target_link_libraries(${LIBRARY_NAME}
         pico_stdlib
         mqtt
         observer
+        PUBLIC
         nlohmann_json::nlohmann_json
 )
