add json parser download to top level cmakelists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,7 +86,12 @@ add_subdirectory(sensors)
 add_subdirectory(i2c)
 add_subdirectory(classes)
 add_subdirectory(observer)
-# add_subdirectory(mqtthandler)
+
+# # JSON parser
+include(FetchContent)
+
+FetchContent_Declare(json URL https://github.com/nlohmann/json/releases/download/v3.11.3/json.tar.xz)
+FetchContent_MakeAvailable(json)
 
 # Link to pico_stdlib (gpio, time, etc. functions)
 target_link_libraries(${PROJECT_NAME} PRIVATE
@@ -100,6 +105,7 @@ target_link_libraries(${PROJECT_NAME} PRIVATE
         uart
         classes
         sensors
+        nlohmann_json::nlohmann_json
 )
 
 # Enable usb output, disable uart output
