moved eeprom to i2c library

--- a/i2c/CMakeLists.txt
+++ b/i2c/CMakeLists.txt
@@ -5,6 +5,7 @@ set(LIBRARY_NAME i2c)
 add_library(${LIBRARY_NAME}
         I2CBus.cpp
         I2CHandler.cpp
+        Eeprom.cpp
 )
 
 # Include directories -- No need to edit
