--- a/misc/CMakeLists.txt
+++ b/misc/CMakeLists.txt
@@ -1,5 +1,5 @@
 # Library name
-set(LIBRARY_NAME classes)
+set(LIBRARY_NAME misc)
 
 # Library sources -- Add each .cpp or .c file from the folder here
 add_library(${LIBRARY_NAME}
