--- a/i2c/CMakeLists.txt
+++ b/i2c/CMakeLists.txt
@@ -14,7 +14,8 @@ target_include_directories(${LIBRARY_NAME} INTERFACE
 )
 
 # Link Libraries -- Add each library that the current module needs to this list
-target_link_libraries(${LIBRARY_NAME} PUBLIC
+target_link_libraries(${LIBRARY_NAME}
+        PUBLIC
         hardware_i2c
         hardware_gpio
 )
